k8s/overlays/local/network-store-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: network-store-server-ingress
  annotations:
    # To wait 600s for a reply from the server on big imports
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    # To be able to import big networks
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    # springfox swagger-ui uses X-Forwarded-Prefix to find the
    # base url when behind a reverse proxy.
    # nginx-ingress-controller V0.24 has a simple alternative
    # but latest minikube 1.1.0 uses V0.23 (untested):
    # nginx.ingress.kubernetes.io/x-forwarded-prefix: "/network-store-server"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Forwarded-Prefix         /network-store-server/;
spec:
  rules:
    - http:
        paths:
          - path: /network-store-server(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: network-store-server
                port:
                  number: 80
